[package]
name = "hardpass"
description = "Password and shadow hash generator"
version = "0.1.0"
edition = "2021"
authors = ["Oli Dacombe <olidacombe@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha-crypt = "0.5.0"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
